# Kasane-logic

./: Cargo.toml
benchmark_history/: Complement.md  Equality.md  Intersection.md  Symmetric Difference.md  Union.md  insert.md
src/: main.rs
src/function/: line.rs  mod.rs  point.rs  triangle.rs
src/id/: mod.rs  pure.rs  relation.rs  top.rs
src/set/: pure.rs
